--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -83,19 +83,19 @@
       </div>
     </div>
 
-    <div id="recurrent-entries" class="hidden">
+    <div id="recurrent-entries" class="<%= (schedule.is_recurrent == 1) ? '' : 'hidden' %>">
       <div class="row">
         <div class="col-sm-4">
           <div class="form-group">
-            <%= schedule_form.label :recurrence_period %>
-            <%= schedule_form.text_field :recurrence_period, class: 'form-control' %>
+            <%= schedule_form.label :recurrence_unit %>
+            <%= schedule_form.text_field :recurrence_unit, class: 'form-control' %>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="form-group">
-            <%= schedule_form.label :repeat_every %>
-            <%= schedule_form.select(:repeat_every, {}, { include_blank: '- Select period -' }, { class: 'form-control' }) do %>
-              <% options_for_select(repeat_every_list, schedule.repeat_every) %>
+            <%= schedule_form.label :recurrence_frequency %>
+            <%= schedule_form.select(:recurrence_frequency, {}, { include_blank: '- Select period -' }, { class: 'form-control' }) do %>
+              <% options_for_select(repeat_every_list, schedule.recurrence_frequency) %>
             <% end %>
           </div>
         </div>
