--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Schedules List') %>
 
-<%= render 'schedule_modal', schedule: @schedule, repeat_every_list: @repeat_every_list %>
+<%= render 'schedule_modal', schedule_recurrent_unit_list: @schedule_recurrent_unit_list %>
 
 <div class="calendar"></div>
