--- a/app/views/devices/_device_attribute_form.html.erb
+++ b/app/views/devices/_device_attribute_form.html.erb
@@ -2,9 +2,9 @@
 
   <div class="row">
 
-    <div class="col-sm-3">
+    <div class="col-sm-2">
       <div class="form-group">
-        <%= label DeviceAttribute, :name, 'Prop Name' %>
+        <%= label DeviceAttribute, :name %>
       </div>
     </div>
 
@@ -17,6 +17,12 @@
     <div class="col-sm-2">
       <div class="form-group">
         <%= label DeviceAttribute, :primitive_type_c_id %>
+      </div>
+    </div>
+
+    <div class="col-sm-1">
+      <div class="form-group">
+        <%= label DeviceAttribute, :index_on_device %>
       </div>
     </div>
 
