--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+<div id="device-attribute-direction-constants" class="hidden" data-constants="<%= ActiveSupport::JSON.encode(DeviceAttribute::DIRECTIONS) %>"></div>
+<div id="device-attribute-primitive-types-constants" class="hidden" data-constants="<%= ActiveSupport::JSON.encode(DeviceAttribute::PRIMITIVE_TYPES) %>"></div>
+
 <%= render 'layouts/header' %>
 
 <div class="container-fluid">
