--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -5,8 +5,8 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-2"><b>Name</b></div>
-  <div class="col-sm-2"><b>Location</b></div>
+  <div class="col-sm-5"><b>Name</b></div>
+  <div class="col-sm-5"><b>Location</b></div>
   <div class="col-sm-2"><b>Actions</b></div>
 </div>
 
@@ -15,8 +15,8 @@
 <% @devices.each do |device| %>
 
   <div class="row">
-    <div class="col-sm-2"><%= device.name %></div>
-    <div class="col-sm-2"><%= device.location %></div>
+    <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-sm-5"><%= device.name %></div>
+    <div class="col-sm-5"><%= device.location %></div>
     <div class="col-sm-2">
       <%= link_to(device) do %>
         <span class="glyphicon glyphicon-zoom-in"></span>
