--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
           <% if user_signed_in? %>
             <li><a href="<%= devices_path %>">Devices</a></li>
             <li><a href="<%= schedules_path %>">Schedules</a></li>
+            <li><a href="<%= quick_buttons_path %>">Quick buttons</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span>Account</span>
