--- a/app/views/quick_buttons/new.html.erb
+++ b/app/views/quick_buttons/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Quick Button</h1>
 
-<%= render 'form', quick_button: @quick_button %>
+<%= render 'quick_button_form', quick_button: @quick_button %>
 
 <%= link_to 'Back', quick_buttons_path %>
