Semi-Fix quick button update | Send quick button info to device

--- a/app/views/actions/_action_form_element.erb
+++ b/app/views/actions/_action_form_element.erb
@@ -1,4 +1,4 @@
-<% action_index = (defined? action_counter) ? action_counter : 'ACTION_INDEX' %>
+<% action_index = (action.id) ? action.id : 'ACTION_INDEX' %>
 <% current_form_prefix = prefix_for_subform + '[actions]' %>
 
 <div class="action form-row" data-index="<%= action_index %>">
