--- a/app/views/quick_buttons/_quick_button_form.html.erb
+++ b/app/views/quick_buttons/_quick_button_form.html.erb
@@ -1,7 +1,6 @@
 <div id="get-device-attributes-list-url" class="hidden" data-url="<%= device_url('DEVICE_ID') + '/get_device_attributes_list' %>"></div>
 
-<% current_form_prefix = 'quick_button_event' %>
-<% prefix_for_subform = current_form_prefix %>
+<% prefix_for_subform = 'quick_button_event' %>
 
 <div id="devices-search-url" class="hidden" data-url="<%= devices_search_url %>"></div>
 
