--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import 'bootstrap/dist/css/bootstrap';
+@import 'bootstrap';
 @import 'select2/dist/css/select2';
 @import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
 @import 'fullcalendar/dist/fullcalendar';
