--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,8 +55,46 @@ $gray-medium-light: #eaeaea;
   box-sizing: border-box;
 }
 
-/* universal */
+/* Responsive tables */
+@media screen and (max-width: 991px) {
+  .responsive-table-container {
+    &.panel-default {
+      border: none;
+    }
+    .responsive-table {
+      padding: 0 15px;
+      .responsive-table-header {
+        display: none;
+      }
+      .row {
+        margin-bottom: 10px;
+        display: block;
+        border: 1px solid #ddd;
+        .col-md-1, .col-md-2, .col-md-5 {
+          display: block;
+          text-align: right;
+          font-size: 13px;
+          border-bottom: 1px dotted #ccc;
+          &:before {
+            content: attr(data-label);
+            float: left;
+            font-weight: bold;
+            font-size: 150%;
+          }
+          &:last-child {
+            border-bottom: 0;
+          }
+          .responsive-table-element {
+            font-size: 150%;
+            margin: 15px 0;
+          }
+        }
+      }
+    }
+  }
+}
 
+/* universal */
 body {
   padding-top: 60px;
 }
@@ -81,7 +119,6 @@ textarea {
 }
 
 /* typography */
-
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
@@ -108,7 +145,6 @@ p {
 }
 
 /* footer */
-
 footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -139,7 +175,6 @@ span.editable {
 }
 
 /* miscellaneous */
-
 .debug_dump {
   clear: both;
   float: left;
