--- a/app/views/devices/_device_attribute_form_element.html.erb
+++ b/app/views/devices/_device_attribute_form_element.html.erb
@@ -21,71 +21,71 @@
 
     <div class="row">
 
-      <div class="col-sm-2">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-md-2">
+        <div class="form-group responsive-table-element">
           <%= device_attribute_form.text_field :name, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-sm-2">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:direction_c_id) %>" class="col-md-2">
+        <div class="form-group responsive-table-element">
           <%= device_attribute_form.select(:direction_c_id, {}, {}, { class: 'form-control device-attribute-direction-selector' }) do %>
             <% options_for_select(@directions, device_attribute.direction_c_id) %>
           <% end %>
         </div>
       </div>
 
-      <div class="col-sm-2">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:primitive_type_c_id) %>" class="col-md-2">
+        <div class="form-group responsive-table-element">
           <%= device_attribute_form.select(:primitive_type_c_id, {}, {}, { class: 'form-control device-attribute-primitive-type-selector' }) do %>
             <% options_for_select(@primitive_types, device_attribute.primitive_type_c_id) %>
           <% end %>
         </div>
       </div>
 
-      <div class="col-sm-1">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:index_on_device) %>" class="col-md-1">
+        <div class="form-group responsive-table-element">
           <%= device_attribute_form.text_field(:index_on_device, class: 'form-control') %>
         </div>
       </div>
 
-      <div class="col-sm-1">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:min_value) %>" class="col-md-1">
+        <div class="form-group responsive-table-element">
           <% field_params = { class: 'form-control device-attribute-min-value' } %>
-          <% (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID] || device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:disabled] = true : field_params[:disabled] = false %>
-          <% (device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:value] = 'ON' : nil %>
+          <% (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID] || device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:readonly] = true : field_params[:readonly] = false %>
+          <% (device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:value] = DeviceAttribute::BOOL_VALUES[:MIN][:ID] : nil %>
           <%= device_attribute_form.text_field :min_value, field_params %>
         </div>
       </div>
 
-      <div class="col-sm-1">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:max_value) %>" class="col-md-1">
+        <div class="form-group responsive-table-element">
           <% field_params = { class: 'form-control device-attribute-max-value' } %>
-          <% (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID] || device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:disabled] = true : field_params[:disabled] = false %>
-          <% (device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:value] = 'OFF' : nil %>
+          <% (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID] || device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:readonly] = true : field_params[:readonly] = false %>
+          <% (device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID]) ? field_params[:value] = DeviceAttribute::BOOL_VALUES[:MAX][:ID] : nil %>
           <%= device_attribute_form.text_field :max_value, field_params %>
         </div>
       </div>
 
-      <div class="col-sm-1">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:set_value) %>" class="col-md-1">
+        <div class="form-group responsive-table-element">
           <% if device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID] %>
             <% disable_field = true %>
           <% else %>
             <% disable_field = false %>
           <% end %>
-          <%= device_attribute_form.text_field :set_value, { class: 'form-control device-attribute-set-value', disabled: disable_field } %>
+          <%= device_attribute_form.text_field :set_value, { class: 'form-control device-attribute-set-value', readonly: disable_field } %>
         </div>
       </div>
 
-      <div class="col-sm-1">
-        <div class="form-group">
+      <div data-label="<%= Device.human_attribute_name(:unit) %>" class="col-md-1">
+        <div class="form-group responsive-table-element">
           <%= device_attribute_form.text_field :unit, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-sm-1">
-        <div class="form-group">
+      <div class="col-md-1">
+        <div class="form-group responsive-table-element">
           <input type="button" class="action-button active remove-form-row form-control" value="X"/>
         </div>
       </div>
