--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -4,33 +4,50 @@
   <h1>Devices List</h1>
 </div>
 
-<div class="row">
-  <div class="col-sm-5"><b>Name</b></div>
-  <div class="col-sm-5"><b>Location</b></div>
-  <div class="col-sm-2"><b>Actions</b></div>
-</div>
+<div class="responsive-table-container">
 
-<hr/>
+  <div class="responsive-table">
 
-<% @devices.each do |device| %>
+    <div class="responsive-table-header">
+      <div class="row">
+        <div class="col-md-5"><b>Name</b></div>
+        <div class="col-md-5"><b>Location</b></div>
+        <div class="col-md-2"><b>Actions</b></div>
+      </div>
 
-  <div class="row">
-    <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-sm-5"><%= device.name %></div>
-    <div class="col-sm-5"><%= device.location %></div>
-    <div class="col-sm-2">
-      <%= link_to(device) do %>
-        <span class="glyphicon glyphicon-zoom-in"></span>
-      <% end %> |
-      <%= link_to edit_device_path(device) do %>
-        <span class="glyphicon glyphicon-pencil"></span>
-      <% end %>  |
-      <%= link_to device, method: :delete, data: { confirm: 'Are you sure?' } do %>
-        <span class="glyphicon glyphicon-remove"></span>
-      <% end %>
+      <hr/>
+
     </div>
+
+    <% @devices.each do |device| %>
+
+      <div class="row">
+        <div data-label="<%= Device.human_attribute_name(:name) %>" class="col-md-5">
+          <div class="responsive-table-element"><%= device.name %></div>
+        </div>
+        <div data-label="<%= Device.human_attribute_name(:location) %>" class="col-md-5">
+          <div class="responsive-table-element"><%= device.location %></div>
+        </div>
+        <div data-label="Actions" class="col-md-2">
+          <div class="responsive-table-element">
+            <%= link_to(device) do %>
+              <span class="glyphicon glyphicon-zoom-in"></span>
+            <% end %> |
+            <%= link_to edit_device_path(device) do %>
+              <span class="glyphicon glyphicon-pencil"></span>
+            <% end %>  |
+            <%= link_to device, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-remove"></span>
+            <% end %>
+          </div>
+        </div>
+      </div>
+
+      <hr/>
+    <% end %>
+
   </div>
 
-  <hr/>
-<% end %>
+</div>
 
 <%= link_to 'New Device', new_device_path %>
