Fix device attribute form when primitive type bool

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
 <div id="device-attribute-direction-constants" class="hidden" data-constants="<%= ActiveSupport::JSON.encode(DeviceAttribute::DIRECTIONS) %>"></div>
 <div id="device-attribute-primitive-types-constants" class="hidden" data-constants="<%= ActiveSupport::JSON.encode(DeviceAttribute::PRIMITIVE_TYPES) %>"></div>
+<div id="device-attribute-bool-values-data" class="hidden" data-constants="<%= ActiveSupport::JSON.encode(DeviceAttribute::BOOL_VALUES) %>"></div>
 
 <%= render 'layouts/header' %>
 
