--- a/app/views/devices/_device_attribute_form_element.html.erb
+++ b/app/views/devices/_device_attribute_form_element.html.erb
@@ -69,12 +69,19 @@
 
       <div data-label="<%= Device.human_attribute_name(:set_value) %>" class="col-md-1">
         <div class="form-group responsive-table-element">
-          <% if device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID] %>
-            <% disable_field = true %>
+          <% field_params = { class: 'form-control device-attribute-set-value' } %>
+          <% (device_attribute.direction_c_id == DeviceAttribute::DIRECTIONS[:FEEDBACK_ONLY][:ID]) ? field_params[:disabled] = true : nil %>
+          <% if device_attribute.primitive_type_c_id == DeviceAttribute::PRIMITIVE_TYPES[:BOOL][:ID] %>
+            <%= device_attribute_form.select(:set_value, {}, {}, { class: 'form-control  device-attribute-set-value' }) do %>
+              <% options_for_select(
+                     [
+                         [DeviceAttribute::BOOL_VALUES[:MIN][:LABEL], DeviceAttribute::BOOL_VALUES[:MIN][:ID]],
+                         [DeviceAttribute::BOOL_VALUES[:MAX][:LABEL], DeviceAttribute::BOOL_VALUES[:MAX][:ID]],
+                     ], device_attribute.set_value) %>
+            <% end %>
           <% else %>
-            <% disable_field = false %>
+            <%= device_attribute_form.text_field :set_value, field_params %>
           <% end %>
-          <%= device_attribute_form.text_field :set_value, { class: 'form-control device-attribute-set-value', readonly: disable_field } %>
         </div>
       </div>
 
