Change login screen | Add chartkick gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
 @import 'fullcalendar/dist/fullcalendar';
 @import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
+@import 'devise';
 @import 'devices';
 @import 'schedules';
 
