--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -16,17 +16,26 @@
 
     <div class="row">
 
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <div class="form-group">
           <%= device_form.label :name %>
           <%= device_form.text_field :name, class: 'form-control' %>
         </div>
       </div>
 
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <div class="form-group">
           <%= device_form.label :location %>
           <%= device_form.text_field :location, class: 'form-control' %>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="form-group">
+          <%= device_form.label :type_c_id %>
+          <%= device_form.select(:type_c_id, {}, {include_blank: '- Select type -' }, { class: 'form-control' }) do %>
+            <% options_for_select(@types, device.type_c_id) %>
+          <% end %>
         </div>
       </div>
 
