--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -160,6 +160,21 @@
   </div>
 <% end %>
 
+<!-- DEVICE TYPE SETUP -->
+<% if @device.type_c_id == Device::TYPES[:THERMOSTAT][:ID] %>
+  <div class="panel panel-default">
+
+    <div class="panel-heading">
+      <h3 class="panel-title">Device mode setup</h3>
+    </div>
+
+    <div class="panel-body">
+      SETUP
+    </div>
+
+  </div>
+<% end %>
+
 <!-- SYSTEM INFO FOR DEVICE -->
 <div class="panel panel-default">
   <div class="panel-heading">
